Fixed alignment on mobile for home arrow

--- a/css/pages/home.scss
+++ b/css/pages/home.scss
@@ -146,6 +146,7 @@
             @media (max-width: 480px) {
               height: 148px;
               width: 85%;
+              left: 0;
             }
           }
         }
